@@ -1,21 +1,19 @@
 mode_211
 enable_trace
-	
+
 establish_context
 card_connect
 select -AID a0000000030000
 open_sc -security 1 -keyind 0 -keyver 0 -mac_key 404142434445464748494a4b4c4d4e4f -enc_key 404142434445464748494a4b4c4d4e4f // Open secure channel
 delete -AID a00000006203010c0101
 delete -AID a00000006203010c01
-install_for_load -AID a00000006203010c01 -sdAID A000000003000000 -nvCodeLimit 1000
-load -file HelloWorld.bin
-install_for_install -pkgAID a00000006203010c01 -AID a00000006203010c0101 -instAID a00000006203010c0101 -nvDataLimit 2000 -instParam 00 -priv 2
+install -file HelloWorld.bin -nvDataLimit 2000 -instParam 00 -priv 2
 # getdata
 # close_sc // Close secure channel
 # putkey // Put key
   // options:
   //          -keyind Key index
-  //          -keyver Key version  
+  //          -keyver Key version
   //          -key Key value in hex
 card_disconnect
 release_context
